1.01 2008-11-25
- code cleanups
- detect and fix bug with deeply nested includes, where a Match
  (Pass) from a lower level gets directly propagated to the top

1.00 2008-11-25
- declare all $self as Mail::SPF::Iterator object
- add method to get/set default explanation string
- call it feature complete -> set version to 1.0

0.10 2008-11-24
- license clarification for SPF test suite in COPYRIGHT and add
  t/rfc4408-tests.LICENSE to distribution
- documentation update
- samples/spflookup shows explanation on Fail

0.09 2008-11-24
- internal restructuring, better checking that DNS answers match
  the question
- expansion of %{p} in exp= modifier
- more tests outside of official SPF test suite

0.08 2008-11-22
- accepts also SenderID records (only spf2.0/mfrom or 
  spf2.0/pra,mfrom or spf2.0/mfrom,pra) and handle them like 
  v=spf1 records. Prefer "real" SPF records

0.07 2008-11-22
- %{p} macro gets now expanded in TXT for explain (but still not in
  exp=..%{p}.. modifiers)
- method result to get result (before next gives the final result,
  in case one don't want to lookup %{p} in explain)
- method mailheader doesn't take arguments anymore, because result
  gets stored in the object

0.06 2008-11-21
- exp method works for most cases, except when it contains %{p} macro
  which in most cases will be replaced with 'unknown'
- fix for interpretation of %{i} for IP6
- better debugging
- script samples/spflookup.pl which does lookup from the command line
  and returns SPF-Received header

0.05 2008-11-20
- sub mailheader which gives SPF-Received header
- sub lookup_blocking for simple blocking lookup (for convinience)
- clean up 'problem' messages, returns mechanism which matcht
- better debugging

0.04 2008-11-20
- do not depend on additional DNS RR for resolving CNAME and finding 
  address for MX but still use them if found
  test suite expanded to test with and w/o additional RR
- do not depend on YAML for executing SPF test suite. The YAML file