@@ -2,6 +2,7 @@
 - code cleanups
 - detect and fix bug with deeply nested includes, where a Match
   (Pass) from a lower level gets directly propagated to the top
+- better SenderID support, some tests for SenderID records
 
 1.00 2008-11-25
 - declare all $self as Mail::SPF::Iterator object
